ci-cd-workshop/k8s/classic/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-workshop
  labels:
    name: cicd-workshop
