ci-cd-workshop/k8s/classic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-web
  namespace: cicd-workshop
  labels:
    app: ci-cd-web
spec:
  type: ClusterIP
  selector:
    app: ci-cd-web
  ports:
    - port: 80
      targetPort: 5173
      protocol: TCP
      name: http
