ci-cd-workshop/k8s/classic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-cd-web-ingress
  namespace: cicd-workshop
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ci-cd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ci-cd-web
                port:
                  number: 80
